--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -7,7 +7,7 @@
   "contributors": [
   ],
   "contributorsPerLine": 7,
-  "projectName": "init-template",
+  "projectName": "ZetaRFTools",
   "projectOwner": "monash-human-power",
   "repoType": "github",
   "repoHost": "https://github.com"
