Move sources to src directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,16 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build)
 add_compile_definitions(WIRINGPI)
 include_directories(ZetaRF/src)
 
-file(GLOB_RECURSE CONFIG_SOURCES "configs/*.cpp")
+file(GLOB_RECURSE CONFIG_SOURCES "src/configs/*.cpp")
 
-add_executable(AverageRSSI AverageRSSI.cpp ${CONFIG_SOURCES})
+add_executable(AverageRSSI src/AverageRSSI.cpp ${CONFIG_SOURCES})
 target_link_libraries(AverageRSSI zetarf)
 
-add_executable(BandwidthTest BandwidthTest.cpp ${CONFIG_SOURCES})
+add_executable(BandwidthTest src/BandwidthTest.cpp ${CONFIG_SOURCES})
 target_link_libraries(BandwidthTest zetarf)
 
-add_executable(SimpleRx SimpleRx.cpp ${CONFIG_SOURCES})
+add_executable(SimpleRx src/SimpleRx.cpp ${CONFIG_SOURCES})
 target_link_libraries(SimpleRx zetarf)
 
-add_executable(Beacon Beacon.cpp ${CONFIG_SOURCES})
+add_executable(Beacon src/Beacon.cpp ${CONFIG_SOURCES})
 target_link_libraries(Beacon zetarf)
